# bevy-game-test

./: Cargo.toml  README.md
src/: factory.rs  main.rs
src/components/: army.rs  bot.rs  grid.rs  mod.rs  position.rs  thrust.rs  tilemap.rs  turret.rs
src/entities/: initial_state.rs  mod.rs  state.rs  ufo.rs
src/events/: mod.rs  new_game.rs
src/resources/: mod.rs  textures.rs
src/systems/: bot.rs  camera.rs  game.rs  grid_renderer.rs  init.rs  input.rs  mod.rs  movement.rs  tilemap_renderer.rs  turret.rs
