[package]
name = "bevy-game-test"
version = "0.1.0"
authors = ["Wesley <oliveirawesleyrj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.7.0"
rand = "*"
integer_scaling = "1.3.2"

[profile.dev.package."*"]
opt-level = 3
